[gd_scene load_steps=19 format=3 uid="uid://chpjrdt5nonfh"]

[ext_resource type="Texture2D" uid="uid://dfk13ohdv0wq8" path="res://assets/enemies/slime/idle.png" id="1_srm8f"]
[ext_resource type="Script" uid="uid://ua88uvsuvae7" path="res://enemy_scenes/slime_script.gd" id="1_x6q26"]
[ext_resource type="Texture2D" uid="uid://cuvsdr5pmgoo8" path="res://assets/enemies/slime/hurt.png" id="2_7uumt"]
[ext_resource type="PackedScene" uid="uid://ckxeiidnaa2ne" path="res://components/health_component.tscn" id="4_jq7lk"]
[ext_resource type="PackedScene" uid="uid://bv3bf3jmlol3s" path="res://components/hitbox_component.tscn" id="5_ik531"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ik531"]
atlas = ExtResource("2_7uumt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5lrl"]
atlas = ExtResource("2_7uumt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6q26"]
atlas = ExtResource("1_srm8f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uumt"]
atlas = ExtResource("1_srm8f")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_81gwq"]
atlas = ExtResource("1_srm8f")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq7lk"]
atlas = ExtResource("1_srm8f")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_x6q26"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik531")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5lrl")
}],
"loop": false,
"name": &"hurt",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6q26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uumt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81gwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq7lk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7uumt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_81gwq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ik531"]
radius = 72.2564

[sub_resource type="CircleShape2D" id="CircleShape2D_xkojx"]
radius = 8.69245

[sub_resource type="CircleShape2D" id="CircleShape2D_jq7lk"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_jq7lk"]

[node name="slime" type="CharacterBody2D"]
collision_mask = 3
platform_floor_layers = 4294967040
script = ExtResource("1_x6q26")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_x6q26")
animation = &"hurt"
autoplay = "idle"

[node name="main_body" type="CollisionShape2D" parent="."]
position = Vector2(-0.999994, -8)
scale = Vector2(1.15701, 0.908993)
shape = SubResource("CircleShape2D_7uumt")

[node name="detectionArea" type="Area2D" parent="."]
position = Vector2(-1, -8)
scale = Vector2(2.04711, 2.02897)

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
position = Vector2(-7.15256e-07, -9.53674e-07)
scale = Vector2(7.609, 7)
shape = SubResource("CircleShape2D_81gwq")

[node name="lineOfSight" type="RayCast2D" parent="."]
target_position = Vector2(40, 0)
collision_mask = 3

[node name="attack_area" type="Area2D" parent="."]
position = Vector2(-1.00001, -8)
scale = Vector2(0.9, 0.9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
position = Vector2(0, -2.86102e-06)
shape = SubResource("CircleShape2D_ik531")

[node name="healthComponent" parent="." instance=ExtResource("4_jq7lk")]

[node name="hitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_ik531")]
position = Vector2(-1, -8)
health_component = NodePath("../healthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxComponent"]
scale = Vector2(1.49555, 1.34978)
shape = SubResource("CircleShape2D_xkojx")

[node name="hurtBox" type="Area2D" parent="."]
position = Vector2(-1, -8)
scale = Vector2(1.49575, 1.32957)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
shape = SubResource("CircleShape2D_jq7lk")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 16.0
time_horizon_agents = 3.15
avoidance_layers = 3
avoidance_mask = 3

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_jq7lk")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]
[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
